--- a/src/app/item-form/item-form.component.html
+++ b/src/app/item-form/item-form.component.html
@@ -1,23 +1,32 @@
 <div class="container">
     <h1>Formulaire de génération</h1>
     <form #itemForm="ngForm">
+
       <div class="form-group">
         <label for="item-level">Niveau</label>
-        <input type="number" class="form-control" id="item-level" [(ngModel)]="itemWantedDescriptor.level" name="level">
+        <select class="form-control" id="item-level"
+        [(ngModel)]="itemWantedDescriptor.level" name="level">
+          <option [value]="null" class="random-opt">Aléatoire</option>
+          <option *ngFor="let lv of levelList" [value]="lv">{{lv}}</option>
+        </select>
       </div>
 
       <div class="form-group">
         <label for="item-rarity">Rareté</label>
         <select class="form-control" id="item-rarity"
         [(ngModel)]="itemWantedDescriptor.rarityIndex" name="rarityIndex">
-          <option [value]="null"><i>Random</i></option>
+          <option [value]="null" class="random-opt">Aléatoire</option>
           <option *ngFor="let rar of referenceDataService.rarityTable" [value]="rar.rarityIndex">{{rar.rarityName}}</option>
         </select>
       </div>
 
       <div class="form-group">
         <label for="item-slot">Emplacement</label>
-        <input type="text" class="form-control" id="item-slot">
+        <select class="form-control" id="item-slot"
+        [(ngModel)]="itemWantedDescriptor.slot" name="slot">
+          <option [value]="null" class="random-opt">Aléatoire</option>
+          <option *ngFor="let sl of referenceDataService.slotsTable" [value]="sl">{{sl.name}}</option>
+        </select>
       </div>
 
       <button type="submit" class="btn btn-success">Générer !</button>
