--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-item-form>
-  
-</app-item-form>
+<div class="container">
+    <app-item-form class="row"></app-item-form>
+    <app-generated-items-list class="row pt-5"></app-generated-items-list>
+</div>
