mise en forme globale

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <app-item-form class="row"></app-item-form>
     <app-generated-items-list class="row pt-5"></app-generated-items-list>
 </div>
