--- a/src/app/generated-items-list/generated-items-list.component.html
+++ b/src/app/generated-items-list/generated-items-list.component.html
@@ -1,30 +1,31 @@
 <div class="container-fluid">
     <h3 class="text-center">Objets générés</h3>
+
     <table *ngIf="itemsList.length > 0; else elseBlock" class="table table-striped">
         <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Niveau</th>
-          <th scope="col" >Rareté</th>
-          <th scope="col" >Emplacement</th>
-          <th scope="col" >Bonus principal</th>
-          <th scope="col" >Maitrises</th>
-          <th scope="col" >Def. elem.</th>
-          <th scope="col" >PV</th>
-          <th scope="col">Apparence</th>
+          <th style="width: 20%;" scope="col">#</th>
+          <th style="width: 5%;" scope="col">Niveau</th>
+          <th style="width: 5%;" scope="col" >Rareté</th>
+          <th style="width: 10%;" scope="col" >Emplacement</th>
+          <th style="width: 20%;" scope="col-2" >Bonus principal</th>
+          <th style="width: 15%;" scope="col-2" >Maitrises</th>
+          <th style="width: 15%;" scope="col-2" >Def. elem.</th>
+          <th style="width: 5%;" scope="col-1" >PV</th>
+          <th style="width: 5%;" scope="col-1">Apparence</th>
         </tr>
         </thead>
         <tbody>
             <tr *ngFor="let item of itemsList">
-                <td>{{item.fluffName}}</td>
-                <td>{{item.descriptor.level}}</td>
-                <td>{{item.descriptor.rarityName}}</td>
-                <td>{{item.descriptor.slot.name}}</td>
-                <td>{{item.mainBonus}}</td>
-                <td>{{ item.getItemMasteries()}}</td>
-                <td>{{ item.getItemElementDefenses() }}</td>
-                <td>{{ item.getHP() }}</td>
-                <td>{{ item.getLook() }}</td>
+                <td style="width: 20%;">{{item.fluffName}}</td>
+                <td style="width: 5%;">{{item.descriptor.level}}</td>
+                <td style="width: 5%;">{{item.descriptor.rarityName}}</td>
+                <td style="width: 10%;">{{item.descriptor.slot.name}}</td>
+                <td style="width: 20%;">{{item.mainBonus}}</td>
+                <td style="width: 15%;">{{ item.getItemMasteries()}}</td>
+                <td style="width: 15%;">{{ item.getItemElementDefenses() }}</td>
+                <td style="width: 5%;">{{ item.getHP() }}</td>
+                <td style="width: 5%;">{{ item.getLook() }}</td>
             </tr>
         </tbody>
       </table>
